# geomagnetic-mortality-app

./: .gitignore  README.md  clear_cache.py  preprocess_data.py  pyproject.toml  requirements.txt  run.sh  streamlit_app.py
.streamlit/: config.toml
components/: __init__.py  charts.py  explanations.py  statistics.py
data/preprocessed/: correlation_matrix.parquet  monthly_summary.parquet  summary_stats.json  weekly_merged.parquet
data/raw/: Provisional Mortality Statistics, 2018 through Last Week_I20-I25& I60-I69.xls  Provisional Mortality Statistics, 2018 through Last Week_X40-X49&Y10-Y19.xls  Provisional Mortality Statistics, 2018 through Last Week_X60-X84.xls  Provisional Mortality Statistics, 2018 through Last Week_X85-Y09.xls
pages/: 1_📊_Overview.py  2_🔬_Deep_Dive.py  3_🧪_Interactive_Explorer.py  4_📚_Methodology.py
utils/: __init__.py  data_loader.py  mmwr_calendar.py
